# amazonish-backend-fastapi

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 44b126495913_initial_schema.py  efce406037cc_add_password_to_customer.py
amazonish_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
app/api/routes/: __init__.py  auth.py  db_health.py  health.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  catalog.py  customer.py  events.py  inventory.py  order.py
app/schemas/: auth.py
scripts/: seed.py
tests/: test_health.py
