[project]
name = "amazonish-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.2",

    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pymysql>=1.1",
    "pytest>= 7.4.4",
    "httpx>=4.2.0",
    "passlib>=1.7.4",
    "python-jose>=3.5.0"
    
]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
